[package]
name = "wallet-performance"
version = "0.1.0"
edition = "2021"
description = "Performance test harness comparing minotari_console_wallet (gRPC) vs minotari-cli (REST)"

[dependencies]
# Tari gRPC client for old wallet
minotari_wallet_grpc_client = "5.3.0-pre.3"

# New wallet (minotari-cli) — direct library usage
minotari = { git = "https://github.com/tari-project/minotari-cli.git", rev = "4dc6c0d" }

# Scanning library — used for bulk multi-key scanning in drain (part of minotari-cli workspace)
minotari-scanning = { git = "https://github.com/tari-project/minotari-cli.git", rev = "4dc6c0d", features = ["http"] }

# Tari core types
tari_common_types = "5.3.0-pre.3"
tari_common = "5.3.0-pre.3"
tari_crypto = { version = "0.22.1" }
tari_transaction_components = "5.3.0-pre.3"

# SQLite for new wallet DB access
r2d2 = "0.8"
r2d2_sqlite = "0.31"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# gRPC
tonic = { version = "0.13", features = ["transport"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Metrics / timing
chrono = { version = "0.4", features = ["serde"] }
csv = "1"

# Async trait
async-trait = "0.1"

# Random for load patterns
rand = "0.8"

# System monitoring
sysinfo = "0.33"

# UUID for idempotency keys
uuid = { version = "1", features = ["v4"] }
